welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:5: error: value avance is not a member of Unit
possible cause: maybe a semicolon is missing before `value avance'?
	} avance(5);
          ^PictureMono2:12: error: value avance is not a member of Unit
possible cause: maybe a semicolon is missing before `value avance'?
	}avance(5)
         ^